--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ repositories {
           dirs 'libs'
     }
 }
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -77,16 +78,14 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.squareup:otto:1.3.8'
     //DJI SDK 4.7 4.8不能运行于模拟器中4.6可修正此问题真机无影响
-    implementation 'com.dji:dji-sdk:4.9'
-    implementation 'com.dji:dji-uxsdk:4.9'
-    compileOnly 'com.dji:dji-sdk-provided:4.9'
+    implementation 'com.dji:dji-sdk:4.10'
+    implementation 'com.dji:dji-uxsdk:4.10'
+    compileOnly 'com.dji:dji-sdk-provided:4.10'
     //高德地图SDK SHA1 DF:6E:09:C5:C0:18:DA:FC:4E:6E:D0:D9:1F:69:82:C0:E2:14:E8:D2
     implementation 'com.amap.api:map2d:latest.integration'
     implementation 'com.amap.api:location:latest.integration'
     implementation 'org.greenrobot:greendao:3.2.2'
-    //implementation 'com.jakewharton:butterknife:8.8.1'
-    //annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.qmuiteam:qmui:1.1.12'
-
+    implementation 'com.alibaba:fastjson:1.2.28'
 }
 apply plugin: 'org.greenrobot.greendao'
