--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "visiontek.djicontroller"
         minSdkVersion 23
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
-        versionName "4.8.1"
+        versionName "4.10"
         multiDexEnabled true
-        /*ndk {
+        ndk {
             abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86", "arm64-v8a", "x86_64"
-        }*/
+        }
     }
     sourceSets {
         main {
@@ -67,25 +67,36 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:27.0.0'
-    implementation 'com.android.support:design:27.0.0'
-    implementation 'com.android.support:cardview-v7:27.0.0'
-    implementation 'com.android.support:recyclerview-v7:27.0.0'
-    implementation 'com.android.support:support-v4:27.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
-    //Http请求第三方库
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
+    //有一个不会导致崩溃的报错 增加以下配置解决
+    //java.lang.NoClassDefFoundError: Failed resolution of: Landroid/view/View$OnUnhandledKeyEventListener
+    configurations.all {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            def requested = details.requested
+            if (requested.group == 'com.android.support') {
+                if (!requested.name.startsWith("multidex")) {
+                    details.useVersion '27.+'
+                }
+            }
+        }
+    }
+
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.squareup:otto:1.3.8'
-    //DJI SDK 4.7 4.8不能运行于模拟器中4.6可修正此问题真机无影响
     implementation 'com.dji:dji-sdk:4.10'
     implementation 'com.dji:dji-uxsdk:4.10'
     compileOnly 'com.dji:dji-sdk-provided:4.10'
-    //高德地图SDK SHA1 DF:6E:09:C5:C0:18:DA:FC:4E:6E:D0:D9:1F:69:82:C0:E2:14:E8:D2
     implementation 'com.amap.api:map2d:latest.integration'
     implementation 'com.amap.api:location:latest.integration'
     implementation 'org.greenrobot:greendao:3.2.2'
-    implementation 'com.qmuiteam:qmui:1.1.12'
-    implementation 'com.alibaba:fastjson:1.2.28'
+    implementation 'com.qmuiteam:qmui:1.4.0'
+    implementation 'com.alibaba:fastjson:1.2.58'
 }
 apply plugin: 'org.greenrobot.greendao'
